fixed search bar centering on mobile
fixed search bar centering on mobile

--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -173,10 +173,6 @@ Dark Gray 1             Dark Gray 2             Charcoal
     height: 38px !important;
 }
 
-.myFooter {
-    background-color: #465F75;¬
-}
-
 
 /* setting top padding for footer */
 footer {
